# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.678 2008-06-24 14:43:49 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.0 beta4 (2008/??/??)
 - (2008/06/23) Fixed bug# 3020 - New complex link table blocks output of the
    free text fields.
 - (2008/06/23) Fixed bug# 3019 - Wrong location of the new complex link table.

2.3.0 beta3 (2008/06/24)
 - (2008/06/23) Fixed bug# 3015 - Performace problem in AgentLinkObject.
 - (2008/06/23) Added CustomerUser attribute support for Ticket-ACLs. For
    Example you can use customer user attributes in ACL properties in
    this case to create an list of possible queues in the customer
    interface for creating or moving tickets.

    $Self->{TicketAcl}->{'ACL-Name-Test'} = {
        # match properties
        Properties => {
            CustomerUser => {
                UserCustomerID => ['some_customer_id'],
            },
        }
        # possible properties
        Possible => {
            Ticket => {
                Queue => ['Hotline', 'Junk'],
            },
        },
    };

 - (2008/06/23) Fixed bug# 3013 - Freetext fields show wrong data when queue
    is changed.
 - (2008/06/23) Updated cpan module TEXT::CSV to version 1.06.
 - (2008/06/23) Moved Ticket::ResponsibleAutoSet feature to external ticket
    event module (Kernel::System::Ticket::Event::ResponsibleAutoSet).
 - (2008/06/23) Fixed bug# 2959 - Linking and Unlinking Tickets is not addin
    ticket history and not executing TicketEventHandlerPost() by ticket link
    backend anymore.
 - (2008/06/20) Fixed bug# 1565 - Responsible Agent not updated when creating
    new ticket in phone or email ticket.
 - (2008/06/20) Removed output of linked objects in customer ticket print