@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.678 2008-06-24 14:43:49 mh Exp $
+# $Id: CHANGES,v 1.679 2008-06-25 13:06:25 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -377,6 +377,9 @@
  - (2007/09/13) Improved report overview of perfornance log.
 
 2.2.8 (2008/??/??)
+ - (2008/06/25) Increaded max size of reformated text (reformating new lines)
+    from 20,000 to 60,000 signs (this size is just a safty performance
+    setting in Kernel::Output::HTML::Layout::Ascii2Html()).
  - (2008/06/20) Fixed bug# 3000 - Configured sender address for auto response
     get's ignored.
  - (2008/06/05) Fixed bug# 2962 - Freetext cache problem, old used ticket
